--- a/style.css
+++ b/style.css
@@ -12,7 +12,8 @@ body {
 /* navigation menu */
 nav {
     background: rgb(0, 132, 255);
-   margin: 0 auto;
+    margin: 0 auto;
+    margin-bottom:20px;
     display: flex;
     padding: 10px;
 }
